Lagt til nytt bilded

--- a/index.html
+++ b/index.html
@@ -177,7 +177,8 @@
             }
         ];
 
-        yesButton.addEventListener("click", function () {
+        // **Fikset så kun denne knappen påvirker første siden!**
+        document.getElementById("yesButton").addEventListener("click", function () {
             goToLovePage();
         });
 
