Lagt til nytt bilded

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 swapButtons: true,
                 yesColor: "#ef476f",
                 noColor: "#06d6a0",
-                yesAction: function () { goToStep(1); }, // **Ja går til "Er du seriøs nå eller?"**
+                yesAction: function () { goToStep(1); }, // **Ja går nå KORREKT til "Er du seriøs nå eller?"**
                 noAction: function () { goToLovePage(); } // **Nei går til "Jeg elsker deg, bebe"**
             },
             {
@@ -173,7 +173,7 @@
                 swapButtons: true,
                 yesColor: "#ef476f",
                 noColor: "#06d6a0",
-                yesAction: function () { goToPrankPage(); } // **Ja går nå riktig til "PRØV DEG HAHAHA"**
+                yesAction: function () { goToPrankPage(); } // **Ja går nå KORREKT til "PRØV DEG HAHAHA"**
             }
         ];
 
