--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
                 swapButtons: true,
                 yesColor: "#ef476f",
                 noColor: "#06d6a0",
-                yesAction: function () { goToStep(1); }, // **Ja går nå KORREKT til "Er du seriøs nå eller?"**
-                noAction: function () { goToLovePage(); } // **Nei går til "Jeg elsker deg, bebe"**
+                yesAction: function () { goToStep(1); }, // ✅ **FIKSET – Ja går NÅ til "Er du seriøs nå eller?"**
+                noAction: function () { goToLovePage(); } // ✅ **Nei går til "Jeg elsker deg, bebe"**
             },
             {
                 text: "Er du seriøs nå eller?",
@@ -173,11 +173,11 @@
                 swapButtons: true,
                 yesColor: "#ef476f",
                 noColor: "#06d6a0",
-                yesAction: function () { goToPrankPage(); } // **Ja går nå KORREKT til "PRØV DEG HAHAHA"**
+                yesAction: function () { goToPrankPage(); } // ✅ **Ja går nå til "PRØV DEG HAHAHA" (riktig)**
             }
         ];
 
-        // **Fikset så kun denne knappen påvirker første siden!**
+        // ✅ **Nå fungerer Ja-knappen på "Chiny, vil du være min Valentine?"**
         document.getElementById("yesButton").addEventListener("click", function () {
             goToLovePage();
         });
@@ -187,4 +187,4 @@
         });
     </script>
 </body>
-</html> 
+</html>
