--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 swapButtons: true,
                 yesColor: "#ef476f",
                 noColor: "#06d6a0",
-                yesAction: function () { goToStep(1); }, // ✅ **FIKSET – Ja går NÅ til "Er du seriøs nå eller?"**
+                yesAction: function () { goToStep(1); }, // 🔥 **FIKSET – Ja går NÅ til "Er du seriøs nå eller?"**
                 noAction: function () { goToLovePage(); } // ✅ **Nei går til "Jeg elsker deg, bebe"**
             },
             {
