--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 swapButtons: true,
                 yesColor: "#ef476f",
                 noColor: "#06d6a0",
-                yesAction: function () { goToStep(1); }, // ✅ **Fikset – Ja går nå riktig til "Er du seriøs nå eller?"**
+                yesAction: function () { goToStep(1); }, // ✅ **Ja går nå til "Er du seriøs nå eller?"**
                 noAction: function () { goToLovePage(); } // ✅ **Nei går til "Jeg elsker deg, bebe"**
             },
             {
@@ -173,11 +173,12 @@
                 swapButtons: true,
                 yesColor: "#ef476f",
                 noColor: "#06d6a0",
-                yesAction: function () { goToPrankPage(); } // ✅ **Ja går nå til "PRØV DEG HAHAHA"**
+                yesAction: function () { goToPrankPage(); }, // ✅ **Ja går nå til "PRØV DEG HAHAHA"**
+                noAction: function () { goToLovePage(); } // 🔥 **Nei går NÅ riktig til "Jeg elsker deg, bebe"!**
             }
         ];
 
-        // **✅ Nå fungerer Ja-knappen på "Chiny, vil du være min Valentine?" riktig!**
+        // ✅ **Nå fungerer Ja-knappen på "Chiny, vil du være min Valentine?" riktig!**
         yesButton.onclick = function () { goToLovePage(); };
 
         noButton.onclick = function () { goToStep(0); };
