--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
                     <h1>Okey, la oss prøve på nytt</h1>
                     <h2>Vil du være min valentin bebe?</h2>
                     <p class="small-text">PRØV DEG HAHAHA</p>
-                    <img src="https://github.com/KristianMB13/valentine-website/blob/main/lp_image.jpg?raw=true" width="300"> <!-- 🔥 OPPDATERT BILDE HER -->
+                    <img src="https://github.com/KristianMB13/valentine-website/blob/main/lp_image.jpg?raw=true" width="250" style="margin-top: 10px; max-width: 80%; height: auto;"> <!-- 🔥 Redusert bilde -->
                     <br><br>
-                    <div class="button-container">
+                    <div class="button-container" style="margin-top: 20px;">
                         <button id="yesButton" style="background-color:#06d6a0; color:#fff;">Ja</button>
                         <button id="no" style="background-color:#ef476f; color:#fff;">Nei</button>
                     </div>
