--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
             transition: width 0.3s ease-in-out;
         }
 
-        .large {
-            width: 500px;
+        .prank-image {
+            width: 200px; /* 🔥 Redusert bildestørrelse */
+            max-width: 60%;
+            margin-top: 15px;
+            height: auto;
         }
 
         .button-container {
@@ -51,10 +54,6 @@
             justify-content: center;
             margin-top: 20px;
             gap: 20px;
-        }
-
-        .swap-buttons {
-            flex-direction: row-reverse;
         }
 
         #yesButton, #no {
@@ -115,7 +114,7 @@
                     <h1>Okey, la oss prøve på nytt</h1>
                     <h2>Vil du være min valentin bebe?</h2>
                     <p class="small-text">PRØV DEG HAHAHA</p>
-                    <img src="https://github.com/KristianMB13/valentine-website/blob/main/lp_image.jpg?raw=true" width="250" style="margin-top: 10px; max-width: 80%; height: auto;"> <!-- 🔥 Redusert bilde -->
+                    <img src="https://github.com/KristianMB13/valentine-website/blob/main/lp_image.jpg?raw=true" class="prank-image"> <!-- 🔥 Mindre bilde -->
                     <br><br>
                     <div class="button-container" style="margin-top: 20px;">
                         <button id="yesButton" style="background-color:#06d6a0; color:#fff;">Ja</button>
