--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
         }
 
         .prank-image {
-            width: 200px; /* 🔥 Redusert bildestørrelse */
-            max-width: 60%;
-            margin-top: 15px;
+            width: 220px; /* 🔥 Endret bildestørrelse */
+            max-width: 70%;
             height: auto;
+            margin-top: 15px;
         }
 
         .button-container {
             display: flex;
             justify-content: center;
-            margin-top: 20px;
+            margin-top: 25px;
             gap: 20px;
         }
 
@@ -114,9 +114,9 @@
                     <h1>Okey, la oss prøve på nytt</h1>
                     <h2>Vil du være min valentin bebe?</h2>
                     <p class="small-text">PRØV DEG HAHAHA</p>
-                    <img src="https://github.com/KristianMB13/valentine-website/blob/main/lp_image.jpg?raw=true" class="prank-image"> <!-- 🔥 Mindre bilde -->
+                    <img src="https://github.com/KristianMB13/valentine-website/blob/main/lp_image.jpg?raw=true" class="prank-image">
                     <br><br>
-                    <div class="button-container" style="margin-top: 20px;">
+                    <div class="button-container">
                         <button id="yesButton" style="background-color:#06d6a0; color:#fff;">Ja</button>
                         <button id="no" style="background-color:#ef476f; color:#fff;">Nei</button>
                     </div>
