--- a/index.html
+++ b/index.html
@@ -42,18 +42,19 @@
             transition: width 0.3s ease-in-out;
         }
 
-        .prank-image {
-            width: 220px; /* 🔥 Endret bildestørrelse */
-            max-width: 70%;
-            height: auto;
-            margin-top: 15px;
+        .large {
+            width: 500px;
         }
 
         .button-container {
             display: flex;
             justify-content: center;
-            margin-top: 25px;
+            margin-top: 20px;
             gap: 20px;
+        }
+
+        .swap-buttons {
+            flex-direction: row-reverse;
         }
 
         #yesButton, #no {
@@ -114,9 +115,9 @@
                     <h1>Okey, la oss prøve på nytt</h1>
                     <h2>Vil du være min valentin bebe?</h2>
                     <p class="small-text">PRØV DEG HAHAHA</p>
-                    <img src="https://github.com/KristianMB13/valentine-website/blob/main/lp_image.jpg?raw=true" class="prank-image">
+                    <img src="https://github.com/KristianMB13/valentine-website/blob/main/lp_image.jpg?raw=true" width="250" style="margin-top: 10px; max-width: 80%; height: auto;"> <!-- 🔥 Redusert bilde -->
                     <br><br>
-                    <div class="button-container">
+                    <div class="button-container" style="margin-top: 20px;">
                         <button id="yesButton" style="background-color:#06d6a0; color:#fff;">Ja</button>
                         <button id="no" style="background-color:#ef476f; color:#fff;">Nei</button>
                     </div>
