--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         }
 
         .prank-image {
-            width: 200px; /* 🔥 Endret bildestørrelse KUN for prank-siden */
-            max-width: 60%;
+            width: 180px; /* 🔥 Bildet på "Okey, la oss prøve på nytt" er nå mindre */
+            max-width: 50%;
             height: auto;
-            margin-top: 10px;
+            margin-top: 15px;
         }
 
         .button-container {
