--- a/index.html
+++ b/index.html
@@ -112,15 +112,15 @@
 
         function goToPrankPage() {
             document.body.innerHTML = `
-                <h1>Okey, la oss prøve på nytt. Vil du være min valentin bebe?</h1>
-                <p class="small-text">PRØV DEG HAHAHA</p>
-                <img src="https://github.com/KristianMB13/valentine-website/blob/main/lp_image.jpg?raw=true" width="250" style="margin-top: 10px; max-width: 80%; height: auto;"> <!-- 🔥 Redusert bilde -->
-                <br><br>
-                <div class="button-container" style="margin-top: 20px;">
-                    <button id="yesButton" style="background-color:#06d6a0; color:#fff;">Ja</button>
-                    <button id="no" style="background-color:#ef476f; color:#fff;">Nei</button>
-                </div>
-            `;
+        <h1>Okey, la oss prøve på nytt. Vil du være min valentin bebe?</h1>
+        <p class="small-text">PRØV DEG HAHAHA</p>
+        <img src="https://github.com/KristianMB13/valentine-website/blob/main/lp_image.jpg?raw=true" width="125" style="margin-top: 10px; max-width: 40%; height: auto;"> <!-- 🔥 Dobbelt så lite bilde -->
+        <br><br>
+        <div class="button-container" style="margin-top: 20px;">
+            <button id="yesButton" style="background-color:#06d6a0; color:#fff;">Ja</button>
+            <button id="no" style="background-color:#ef476f; color:#fff;">Nei</button>
+        </div>
+    `;
 
             document.getElementById("yesButton").addEventListener("click", function () {
                 goToLovePage();
@@ -135,6 +135,7 @@
                 noBtn.style.top = y + "px";
             });
         }
+
 
         function goToStep(index) {
             step = index;
