--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             document.body.innerHTML = `
         <h1>Okey, la oss prøve på nytt. Vil du være min valentin bebe?</h1>
         <p class="small-text">PRØV DEG HAHAHA</p>
-        <img src="https://github.com/KristianMB13/valentine-website/blob/main/lp_image.jpg?raw=true" style="width: 125px; height: auto; display: block; margin: 10px auto;"> <!-- ✅ Bildet er 2x mindre -->
+        <img src="https://github.com/KristianMB13/valentine-website/blob/main/lp_image.jpg?raw=true" style="width: 180px; height: auto; display: block; margin: 10px auto;"> <!-- 📏 Midt i mellom størrelsen -->
         <br><br>
         <div class="button-container" style="margin-top: 20px;">
             <button id="yesButton" style="background-color:#06d6a0; color:#fff;">Ja</button>
@@ -135,6 +135,7 @@
                 noBtn.style.top = y + "px";
             });
         }
+
 
 
 
